Made sidebar functional, fixed pie chart overlap, edited header, fixed clear filters.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,9 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela&display=swap');
 
 body {
-  //background: #EEF2FF;
-  //background: url("/assets/wallpaper.jpg");
-  //background: #3c3c44;
   background: url("/assets/wallpaper2.jpg");
   margin: 0;
   min-height: 100%;
@@ -13,6 +10,11 @@ body {
 
 .main-content {
   width: 90%;
+  img{
+    width: 250px;
+    height: 100px;
+    padding: 10px;
+  }
 }
 
 .icons-container {
@@ -32,6 +34,7 @@ body {
   &:hover {
     border: 2px solid #5c3026;
   }
+  cursor: pointer;
 }
 
 .chart-title {
@@ -349,3 +352,45 @@ button{
   border-top: 1px solid #5c3026!important;
   border-bottom: 2px solid #5c3026!important;
 }
+
+// DROPDOWN
+.dropbtn {
+  cursor: pointer;
+  color: black;
+  height: 50px;
+  border-radius: 50%;
+  &:hover {
+    border: 2px solid #5c3026;
+  }
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #898989;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff3d0;
+  min-width: 160px;
+  overflow: auto;
+    margin: 0px 20px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #bb8e05;}
+
+.show {display: block;}
